--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 .formulario {
   margin-top: 5%;
 }
+
+.jumbotron {
+  background-color: rgb(245, 192, 17);
+}
+
+#version {
+  text-align: center;
+}
+
